--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,10 @@ body {
   font-family: 'Arial', sans-serif;
 }
 
+footer {
+    margin-top: 50px;
+}
+
 .galactic-button {
     background-color: #3b3b7a; /* Darker blue for button */
     color: #ffffff;
