--- a/css/styles.css
+++ b/css/styles.css
@@ -187,6 +187,67 @@ footer {
 }
 /*this is the end of the section for the keyboard formatting*/
 
+/*this is the block for the snackbar to display errors*/
+#snackbar-container{
+    position: fixed;
+    top:50%;
+    right: 50%;
+    transform: translate(50%, 50%);
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+}
+
+.snackbar{
+    padding: 1.5rem 1rem;
+    margin: 0.5rem;
+    width: 300px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 5px rgba(0,0,0, 0.7);
+    color:white;
+    animation: fade-in 3s ease ;
+}
+
+
+.snackbar span{
+    float: right;
+    cursor: pointer;
+}
+.error{
+    background-color: red;
+}
+
+.success{
+    background-color: green;
+}
+
+.warning{
+    background-color: gold;
+    color: black;
+}
+
+.fadeout{
+    animation: fade-out 1s ease 2s forwards;
+}
+@keyframes fade-in{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+
+@keyframes fade-out{
+    0%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+    }
+}
+/*this is the block for the snackbar to display errors*/
+
 /*this is the block for centering the images on the view_pattern page*/
 .image-container {
   display: flex;
