--- a/css/styles.css
+++ b/css/styles.css
@@ -274,6 +274,31 @@ footer {
 }
 /*this is the end of the block for the alias*/
 
+/*this is the block to set up the spinner*/
+.spinner {
+    border: 15px solid #f3f3f3;
+    border-top: 15px solid #3498db;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    animation: spin 1s linear infinite;
+}
+
+#loadingIndicator {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10000;
+    display: none;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+/*this is the end of the block to setup the spinner*/
+
 /*this is the block for centering the images on the view_pattern page*/
 .image-container {
   display: flex;
